--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "travis-branch",
   "version": "0.0.1",
-  "description": "missing trais branch status pge",
+  "description": "missing travis branch status pge",
   "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -29,11 +29,7 @@
     "gulp-watch": "^4.3.5"
   },
   "dependencies": {
-    "es6-promise": "^3.0.2",
-    "isomorphic-fetch": "^2.2.0",
     "page": "^1.6.4",
-    "qwest": "^2.2.6",
-    "superagent": "^1.6.1",
-    "whatwg-fetch": "^0.10.1"
+    "qwest": "^2.2.6"
   }
 }
